# ppt-translator

./: .gitignore  DATAFLOW_DIAGRAM.md  EXECUTIVE_SUMMARY.md  INSTALLATION.md  README.md  STREAMLIT_GUIDE.md  SYSTEM_ARCHITECTURE_DOCUMENT.md  Template.pptx  chart1_content_20251217_204850.json  claude-prompt.txt  main.py  pyproject.toml  run_web_app.bat  streamlit_app.py
src/: __init__.py
src/translator/: __init__.py  chart_processor.py  content_processor.py  llm_prompts.py  llm_sample_input.json  text_translator.py  visual_engine.py
src/xml_service/: __init__.py  xml_extractor.py  xml_injector.py
